# fleet-updater

./: .gitignore  README.md
api/: main.py  pyproject.toml  pytest.ini
api/vehicle_app/v1/: schemas.py  views.py
api/vehicle_app/v1/tests/: test_vehicle_app_views.py
web/: jest.config.js  package-lock.json  package.json
web/src/: App.js  api.js
web/src/components/: VehicleItem.jsx  VehicleList.jsx
web/src/redux/: vehicleSlice.js
